--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "hcaptcha": "^0.1.1",
+    "mysql2": "^3.3.3",
     "next": "^13.4.4",
     "postcss": "8.4.24",
     "react": "^18.2.0",
